[workspace]
members = ["programs/*"]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
bytemuck = "1.14"
anyhow = "1.0.71"
bincode = "1.3.3"
ruint = "1.3.0"
num-traits = "0.2.19"
num-integer = "0.1.45"
solana-account = "3.0.0"
# Dev-dependencies (excluded from Anchor build, but needed for dependency resolution)
tokio = "1.35.0"
anchor-client = "0.32.1"
solana-sdk = "2.0.0"
async-trait = "0.1.77"
spl-associated-token-account = "4.0.0"
spl-memo = "4.0.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "s"        # Optimize for size to reduce symbol name lengths
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
