[workspace]
members = ["programs/*"]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
bytemuck = "1.14"
anyhow = "1.0.71"
ruint = "1.3.0"
num-traits = "0.2.19"
num-integer = "0.1.45"
solana-account = "3.0.0"


[profile.release]
overflow-checks = true
lto = false
codegen-units = 1
opt-level = "s"
debug = false
panic = "abort"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
