[package]
name = "solana_arbitrage"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_arbitrage"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
num_enum = "0.7"
bytemuck = "1.14"
static_assertions = "1.1.0"
ruint = "1.3.0"
num-traits = "0.2.19"
num = "0.4.3"
const-crypto = "0.3"
lazy_static = "1.4"


[dev-dependencies]


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }
