[package]
name = "solana_arbitrage"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_arbitrage"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
num_enum = "0.7"
bytemuck = "1.14"
static_assertions = "1.1.0"
ruint = "1.3.0"
num-integer = "0.1.45"
num-traits = "0.2.19"
num = "0.4.3"
const-crypto = "0.3"
lazy_static = "1.4"
bincode = "1.3.3"
solana-account = "3.0.0"
anyhow = "1.0.71"
# DLMM core library - dev-dependencies in dlmm/Cargo.toml are automatically excluded from build
dlmm = { path = "src/programs/meteora_dlmm/dlmm" }


[dev-dependencies]
anchor-client = "0.32.1"
solana-client = "2.3.13"
solana-sdk = "2.3.0"
tokio = { version = "1.0", features = ["full"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }
