[package]
name = "dlmm"
version = "0.3.1"
edition = "2021"
description = "Common libraries for DLMM"
authors = ["tian <tian@racoons.dev>"]

[features]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
anyhow = { workspace = true }
ruint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
bytemuck = { workspace = true, features = ["derive", "min_const_generics"] }
solana-account = { workspace = true }

[dev-dependencies]
tokio = "1.35.0"
anchor-client = "0.32.1"
solana-sdk = "2.0.0"
solana-client = "2.3.0"
anyhow = "1.0"
async-trait = "0.1"
spl-associated-token-account = "4.0.0"
solana-program-test = "2.1.0"
assert_matches = "1.5.0"
solana-program = "2.1.0"
spl-memo = "4.0.0"
bincode = "1.3.3"


# Dev-dependencies (excluded from Anchor build, but needed for dependency resolution)
# tokio = "1.35.0"
# anchor-client = "0.32.1"
# solana-sdk = "2.0.0"
# async-trait = "0.1.77"
# spl-associated-token-account = "4.0.0"
# spl-memo = "4.0.0"




